--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">RandomFace</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="text_detect">简单筛选</string>
 
 </resources>
